# Source

./: BUILD  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml  requirements_lock.txt
.github/workflows/: main.yml
nodejs/calculator/: BUILD.bazel  calculator.spec.js
nodejs/calculator_web/: BUILD.bazel  index.js
python/calculator/: BUILD  calculator_test.py
python/calculator_web/: BUILD  main.py
