# Python

bazel_dep(name = "rules_python", version = "0.32.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")

# Nodejs

bazel_dep(name = "aspect_rules_js", version = "1.42.1")
bazel_dep(name = "rules_nodejs", version = "6.1.1")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

node.toolchain(
    name = "nodejs",
    node_version = "20.12.1",
)

use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

# Jest

bazel_dep(name = "aspect_rules_jest", version = "0.20.0")

jest = use_extension("@aspect_rules_jest//jest:dependencies.bzl", "rules_jest_dependencies")
jest.rules_jest_dependencies()
