load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

js_library(
    name = "calculator",
    srcs = ["calculator.js"],
    visibility = ["//nodejs/calculator_web:__pkg__"],
)

jest_test(
    name = "calculator_test",
    data = [
        "calculator.spec.js",
        ":calculator",
    ],
    node_modules = "//:npm",
)
